# kaos-web

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  _l3_weights.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: build.yml  ci.yml  compat.yml  min-deps.yml  quality.yml  release.yml  scorecard.yml  security-full.yml  security-light.yml  security.yml  test.yml
docs/: BROWSER_CONTENT_EXTRACTION.md  DESIGN.md  HTML_TO_AST_REFERENCE.md  PRD.md  QUALITY.md  READABILITY_EXPERIMENTS.md  TODO.md
docs/standards/: code-quality-standards.md  engineering-process.md  python-design-and-architecture.md  tests-fixtures-ci.md
kaos_web/: __init__.py  __main__.py  batch.py  browser_page_prep.py  browser_tools.py  cli.py  crawl.py  crawl_tools.py  discovery.py  domain_tools.py  errors.py  security.py  serve.py  settings.py  sitemap.py  tools.py
kaos_web/clients/: __init__.py  browser.py  config.py  http.py  page_prep.py  protocol.py  user_agents.py
kaos_web/data/: user_agents.json
kaos_web/discover/: __init__.py  batch.py  crawl.py  discovery.py  sitemap.py
kaos_web/domain/: __init__.py  dns.py  fingerprint.py  http.py  models.py  org.py  profile.py  security.py  service.py  tcp.py  tls.py  udp.py  whois.py
kaos_web/extract/: __init__.py  feed.py  html_to_ast.py  images.py  links.py  metadata.py  readability.py  readability_experiments.py  readability_l3.py  search.py
kaos_web/middleware/: __init__.py  base.py  cache.py  rate_limit.py  retry.py  robots.py
kaos_web/models/: __init__.py  metadata.py  request.py  response.py
kaos_web/search/: __init__.py  backends.py
scripts/: benchmark_comparison.py  readability_experiments.py  run_readability_ablations.py  run_readability_experiments.py  update_user_agents.py
tests/benchmarks/: test_benchmarks.py
tests/fixtures/: README.md  article.html  cornell_law.html
tests/fixtures/readability/: README.md  category_listing.html  corpus.json  directory_listing.html  docket_report.html  multi_section_landing.html  search_results_page.html  team_directory_cards.html
tests/integration/: test_273v_e2e.py  test_browser_interaction.py  test_crawl.py  test_domain_live.py  test_entity_live.py  test_mcp_web_pipeline.py  test_mcp_web_session.py  test_middleware_e2e.py  test_playwright_anti_bot.py  test_real_http.py  test_real_sites.py  test_search_live.py  test_sec_gov_anti_bot.py  test_web_live_extraction_matrix.py
tests/unit/: conftest.py  test_api_naming.py  test_batch.py  test_benchmarks.py  test_browser_client.py  test_browser_doctor.py  test_browser_interaction.py  test_browser_page_prep.py  test_browser_session_isolation.py  test_browser_tools_wrappers.py  test_cache.py  test_cli_commands.py  test_clients_page_prep.py  test_crawl.py  test_crawl_tools.py  test_discovery.py  test_domain_tools.py  test_edge_cases.py  test_feed.py  test_fetch_feed_tool.py  test_fuzz.py  test_html_to_ast.py  test_http_client.py  test_metadata.py  test_middleware.py  test_readability.py  test_readability_experiments.py  test_readability_l3.py  test_readme_drift_pins.py  test_redirect_revalidation.py  test_response_capture.py  test_search_backends.py  test_security.py  test_serve.py  test_settings.py  test_sitemap.py  test_tools.py  test_user_agents.py
tests/unit/domain/: test_dns.py  test_fingerprint.py  test_http.py  test_models.py  test_org.py  test_profile.py  test_security.py  test_service.py  test_tcp.py  test_tcp_banner.py  test_tls.py  test_udp.py  test_whois.py
