[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "kaos-web"
dynamic = ["version"]
description = "Web extraction, browser automation, search, and domain intelligence for KAOS"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "273 Ventures LLC", email = "it@273ventures.com" },
]
maintainers = [
  { name = "Michael Bommarito", email = "mike@273ventures.com" },
]
keywords = [
  "mcp",
  "web-extraction",
  "playwright",
  "domain-intelligence",
  "kaos",
  "agentic",
  "html",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup :: HTML",
  "Typing :: Typed",
]
dependencies = [
  # PEP 440: pin to alpha because 0.1.0aN sorts BEFORE 0.1.0; >=0.1.0
  # would EXCLUDE the only published versions of these siblings.
  "kaos-content>=0.1.0,<0.2",
  "kaos-core>=0.1.0,<0.2",
  "httpx[http2]>=0.28.0",
  # lxml 5.3.0 is the first version with cp313 binary wheels. Earlier
  # 5.x lacks them and the runner has no libxml2-dev for source builds,
  # which makes the lowest-direct CI job source-build and fail.
  "lxml>=5.3.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.50.0"]
dns = ["dnspython>=2.6.0"]
mcp = ["kaos-mcp>=0.1.0,<0.2"]
nlp = ["kaos-nlp-core>=0.1.0,<0.2"]

[dependency-groups]
# ty is pre-1.0 and changes inference between minor versions; pinning
# to a tight range avoids surprise drift between dev environments and
# CI. Bumps go through dependabot.
dev = [
  "dnspython>=2.8.0",
  "kaos-mcp>=0.1.0,<0.2",
  "kaos-nlp-core>=0.1.0,<0.2",
  "playwright>=1.58.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "pytest-benchmark>=5.2.3",
  "pytest-cov>=6.0.0",
  "pytest-httpx>=0.36.0",
  "ruff>=0.15.12",
  "ty>=0.0.34,<0.1",
]

[project.scripts]
kaos-web = "kaos_web.cli:main"
kaos-web-serve = "kaos_web.serve:main"

[project.urls]
Homepage = "https://kelvin.legal"
Documentation = "https://docs.kelvin.legal"
Repository = "https://github.com/273v/kaos-web"
Issues = "https://github.com/273v/kaos-web/issues"
Changelog = "https://github.com/273v/kaos-web/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "kaos_web/_version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/kaos_web",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/NOTICE",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["kaos_web"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=kaos_web",
  "--cov-branch",
  "--cov-report=term-missing",
]
markers = [
  "integration: tests that hit real HTTP servers (require network)",
  "live: tests that require API keys (SERPAPI, BRAVE, EXA, etc.)",
  "benchmark: pytest-benchmark performance tests (tests/benchmarks/)",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "C4", "PTH"]

[tool.ruff.lint.isort]
known-first-party = ["kaos_web", "kaos_core", "kaos_content"]

[tool.coverage.run]
source = ["kaos_web"]
branch = true
omit = [
  "*/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.ty.src]
include = ["kaos_web", "tests"]

[tool.uv]
package = true
exclude-newer = "72 hours"
[tool.uv.exclude-newer-package]
"kaos-citations" = false
"kaos-content" = false
"kaos-core" = false
"kaos-graph" = false
"kaos-llm-client" = false
"kaos-llm-core" = false
"kaos-mcp" = false
"kaos-ml-core" = false
"kaos-names" = false
"kaos-nlp-core" = false
"kaos-nlp-transformers" = false
"kaos-office" = false
"kaos-pdf" = false
"kaos-source" = false
"kaos-tabular" = false
"kaos-web" = false
# 2026-05-22 — uploaded within the 72h quarantine but required to
# close CVEs surfaced by the working pip-audit (uvx swap, kaos-agents
# 50fdc9b). Pre-fix pip-audit returned false-green on these.
"idna" = false      # CVE-2026-45409 (fixed in 3.15)
"starlette" = false # PYSEC-2026-161 (fixed in 1.0.1; pulled via kaos-mcp 0.1.2)
